# asi-project

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  condaenv.wag3l5jf.requirements.txt  docker-compose.yml  environment.yml  local.db  pyproject.toml  pytest.ini
conf/base/: catalog.yml  parameters.yml  parameters_data_science.yml
data/01_raw/: wec_lap_data_sample.csv
data/02_interim/: wec_lap_data_cleaned.csv
data/03_primary/: y_test.parquet  y_train.parquet
data/06_models/: ag_production.pkl
data/08_reporting/: metrics_baseline.csv  metrics_baseline.json
data/09_tracking/: ag_metrics.json
docs/: model_card.md
notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb  03_W&B.ipynb
src/api/: db.py  feature_adapter.py  main.py  model.py
src/asi_project/: __main__.py  pipeline_registry.py  settings.py
src/ui/: app.py
tests/: test_api.py
tests/pipelines/data_science/: test_pipeline.py
wandb/: latest-run
wandb/offline-run-20251030_204852-smi3qwbd/: run-smi3qwbd.wandb
wandb/run-20251030_205731-dv6yfpyk/: run-dv6yfpyk.wandb
wandb/run-20251031_085100-nxjupbfk/: run-nxjupbfk.wandb
wandb/run-20251031_091526-gkb8bskl/: run-gkb8bskl.wandb
wandb/run-20251112_205853-dr324mmx/: run-dr324mmx.wandb
wandb/run-20251112_212523-of7y99d5/: run-of7y99d5.wandb
wandb/run-20251112_213611-b4sqcr6w/: run-b4sqcr6w.wandb
wandb/run-20251112_213614-zy1lkdaj/: run-zy1lkdaj.wandb
wandb/run-20251112_213616-620jzudg/: run-620jzudg.wandb
wandb/run-20251112_213944-80sre6we/: run-80sre6we.wandb
wandb/run-20251112_214202-riovebma/: run-riovebma.wandb
(+57 files in other folders)
