[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "asi_project"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=3.0",
  "notebook",
  "kedro~=1.0.0",
  "kedro-datasets[pandas]",
  "pandas",
  "pydantic-settings>=2.0",
  "scikit-learn",
]

[project.scripts]
asi-project = "asi_project.__main__:main"

[tool.kedro]
package_name = "asi_project"
project_name = "asi-project"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "asi_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "294a4675cabc44aebd9ad68253e58528"
